...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="62sp"
            android:layout_marginEnd="30sp"
            android:gravity="start"
            android:text="@string/Login"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30sp"
                android:paddingRight="30sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="350sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_background"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:inputType="text"/>

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30sp"
                android:paddingEnd="30sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="350sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_background"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="300sp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="75dp"
                    android:backgroundTint="@color/teal"
...
