...
            android:onClick="onAdminEventsButtonClick"
            android:layout_marginBottom="38dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/teal"/>

        <TextView
            android:id="@+id/greetingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_admin"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textColor="#086788" />

    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/teal"
...
