...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/adminButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="OnAdminButtonClick"
            android:text="@string/admin" 
            android:backgroundTint="@color/teal"
            />

        <Button
            android:id="@+id/studentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnStudentButtonClick"
            android:text="@string/student"
            android:backgroundTint="@color/teal"
...
